Retirada da dependência do torch, torchvision

--- a/notebook_lab.ipynb
+++ b/notebook_lab.ipynb
@@ -19,12 +19,12 @@
    "id": "2278883b",
    "metadata": {},
    "source": [
-    "Primeiramente, importando os módulos que serão utilizados:"
+    "Primeiramente, importando os módulos que serão utilizados no pré-processamento:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "bffc3a5b",
    "metadata": {},
    "outputs": [],
@@ -39,19 +39,33 @@
     "import torchvision.transforms as transforms\n",
     "from PIL import Image\n",
     "\n",
-    "## Este módulo permite a leitura de arquivos no python e operações com caminhos\n",
-    "import os\n",
-    "\n",
     "## Estes módulos são as redes neurais, já treinadas, que utilizaremos para gerar características para as imagens do dataset\n",
     "from torchvision.models import resnet18, ResNet18_Weights\n",
-    "from torchvision.models import resnet50, ResNet50_Weights\n",
-    "\n",
+    "from torchvision.models import resnet50, ResNet50_Weights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aef215be",
+   "metadata": {},
+   "source": [
+    "Depois, importando-se os utilizados para o restante das atividades:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "97208c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Este módulo permite a leitura de arquivos no python e operações com caminhos\n",
+    "import os\n",
     "\n",
     "## Estes módulos serão utilizados para selecionar os melhores atributos para o posterior treino da AM\n",
     "import numpy as np\n",
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import chi2\n",
-    "\n",
     "\n",
     "## Estes módulos serão utilizados para criar as figuras com os boxplots\n",
     "import pandas as pd\n",
@@ -73,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "adb2a4ed",
    "metadata": {},
    "outputs": [
@@ -198,7 +212,7 @@
     "\n",
     "print(\"Features extraídas:\", features.shape) # Deve ser [170, 512] ou [170, 2048], a depender da rede neural\n",
     "print(\"Labels:\", labels.shape) # [170]\n",
-    "hook_handle.remove()\n"
+    "hook_handle.remove()"
    ]
   },
   {
@@ -211,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "07308d2c",
    "metadata": {},
    "outputs": [
@@ -226,7 +240,7 @@
    ],
    "source": [
     "# Carrega o dicionário salvo previamente salvo em arquivo\n",
-    "dados_carregados = torch.load('resnet50_data.pt')\n",
+    "dados_carregados = torch.load('resnet18_data.pt')\n",
     "\n",
     "# Acessa os tensores usando as mesmas chaves\n",
     "features = dados_carregados['features']\n",
@@ -240,10 +254,8 @@
     "\n",
     "\n",
     "## Salvando os resultados obtidos, já no formato de array numpy, para acessá-los diretamente depois\n",
-    "torch.save({\n",
-    "    'features': features,\n",
-    "    'labels': labels\n",
-    "}, 'select_data_np.pt')\n",
+    "from scipy.io import savemat\n",
+    "savemat('select_data_np_resnet18.mat', {'features': features, 'labels':labels })\n",
     "\n",
     "\n",
     "print(\"Features extraídas:\", features.shape) # Deve ser (170, 5)\n",
@@ -260,17 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "956c45d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Carrega o dicionário salvo previamente salvo em arquivo\n",
-    "dados_carregados = torch.load('select_data_np.pt', weights_only=False)\n",
+    "from scipy.io import loadmat\n",
+    "dados_carregados = loadmat('select_data_np.mat')\n",
+    "\n",
     "\n",
     "# Carrega os arrays numpy\n",
     "features = dados_carregados['features']\n",
-    "labels = dados_carregados['labels']\n",
+    "labels = dados_carregados['labels'].squeeze()\n",
+    "\n",
     "\n",
     "def criar_box_plot(idx):\n",
     "    feature_a_plotar = features[:, idx]\n",
@@ -297,12 +312,12 @@
    "id": "216d91d7",
    "metadata": {},
    "source": [
-    "Para índices de 0 a 4:"
+    "Para índices de 0 a 4, com a rede neural resnet18:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "0488e228",
    "metadata": {},
    "outputs": [
@@ -323,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "007a9562",
    "metadata": {},
    "outputs": [
@@ -344,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "5be58549",
    "metadata": {},
    "outputs": [
@@ -365,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "4510d5e4",
    "metadata": {},
    "outputs": [
@@ -386,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "fa061a8d",
    "metadata": {},
    "outputs": [
