--- a/notebook_lab.ipynb
+++ b/notebook_lab.ipynb
@@ -11,7 +11,9 @@
     "    \n",
     "    - Pedro Ulisses \n",
     "    \n",
-    "    - Iago Jacob"
+    "    - Iago Jacob\n",
+    "\n",
+    "    - Welberson Franklin"
    ]
   },
   {
